# quant-research-platform-

./: LICENSE  README.md  pyproject.toml
.github/: workflows
Backtester/: __init__.py
Backtester/Execution/: commission.py  slippage.py
Backtester/analytics/: performance.py  statistics.py
Backtester/core/: __init__.py  broker.py  engine.py  event.py  portfolio.py
Backtester/optimization/: bayesian.py  parameter_search.py  walk_forward.py
Backtester/strategy/: base_strategy.py
research/: factor_research.ipynb
tests/: test_performance.py  test_statistics.py
